--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1402,7 +1402,7 @@
 
 	body {
 		background-color: #000;
-		background-image: url("../../images/BRM2899-Stanley-Maps-Are-Weapons-1942_lowres.jpg");
+		background-image: url("../../images/background.jpg");
 		background-size: cover;
 		background-position: top center;
 	}
